k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecm
  labels:
    istio-injection: enabled
