k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordersservice
  namespace: ecm
  labels:
    app: ordersapi 
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: ordersapi
