k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-route
  namespace: ecm
spec:
  hosts:
  - "*"
  gateways:
  - ordersapi-gateway
  http:
  - match:
    - uri:
        prefix: "/orders/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ordersservice.ecm.svc.cluster.local

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: bookinfo
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - bookinfo-gateway
#   http:
#   - match:
#     - uri:
#         exact: /productpage
#     - uri:
#         prefix: /static
#     - uri:
#         exact: /login
#     - uri:
#         exact: /logout
#     - uri:
#         prefix: /api/v1/products
#     route:
#     - destination:
#         host: productpage
#         port:
#           number: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ordersapi-gateway
  namespace: ecm
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
